# AutoDoc

./: Procfile  README.md  autodoc_gold_annotations.csv  newtest.md  pyproject.toml  railway.json  render.yaml  requirements.txt  vercel.json
autodoc/: __init__.py  __main__.py  api.py  cli.py  discovery.py  github.py  llm.py  renderer.py  schema.py
autodoc/extractors/: __init__.py  base.py  code_analyzer.py  cpp.py  generic.py  java.py  javascript.py  python.py
autodoc/templates/: index.html
autodoc_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: INFO202_CONCEPTS.md  INFO202_Final_Report Final.md  demo-readme.md
evaluation/: ASSUMPTIONS.md  README_EVAL.md  eval_spec.json  eval_spec.md  requirements.txt  run_evaluation.py
evaluation_results/: error_analysis.csv  error_analysis.md  evaluation_writeup.md  field_level_results.csv  metrics_by_language.csv  metrics_by_repo_size.csv  metrics_by_support_level.csv  metrics_summary.csv
evaluation_results/autodoc_outputs/: ahupp_python-magic.json  apache_commons-validator.json  benhoyt_inih.json  curl_trurl.json  dinocore1_DevsmartLib-Android.json  django_django.json  elastic_elasticsearch.json  energyaudit_typicodeJsonServerWithAuthenticationBilly.json  facebook_react.json  feross_simple-peer.json  gohugoio_hugo.json  gpanther_fastutil-guava-tests.json  jarro2783_cxxopts.json  jazzband_contextlib2.json  junit-team_junit4.json  opencv_opencv.json  pandas-dev_pandas.json  (+13 more)
tests/: __init__.py  test_api.py  test_discovery.py  test_extractors.py  test_renderer.py  test_schema.py
