[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autodoc-cli"
version = "0.1.0"
description = "Automatic README generation through metadata extraction"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Divya Jyoti", email = "divya@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
api = [
    "flask>=3.0.0",
    "gunicorn>=21.0.0",
]
llm = [
    "google-generativeai>=0.3.0",
    "anthropic>=0.18.0",
    "openai>=1.0.0",
]
all = [
    "autodoc-cli[dev,api,llm]",
]

[project.scripts]
autodoc = "autodoc.cli:main"
autodoc-api = "autodoc.api:main"

[project.urls]
Homepage = "https://github.com/divyajyoti/autodoc"
Repository = "https://github.com/divyajyoti/autodoc"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
